Migrate to tagless components
using https://github.com/ember-codemods/tagless-ember-components-codemod

--- a/app/templates/components/crate-badge.hbs
+++ b/app/templates/components/crate-badge.hbs
@@ -1,5 +1,8 @@
-<img
-    src="https://img.shields.io/badge/crates.io-v{{ this.version }}-{{ this.color }}.svg?longCache=true"
-    alt="{{ this.crate.max_version }}"
-    title="{{ this.crate.name }}’s current version badge"
-    data-test-version-badge>
+<span class="vers" ...attributes>
+  <img
+      src="https://img.shields.io/badge/crates.io-v{{ this.version }}-{{ this.color }}.svg?longCache=true"
+      alt="{{ this.crate.max_version }}"
+      title="{{ this.crate.name }}’s current version badge"
+      data-test-version-badge>
+  
+</span>
