--- a/app/templates/components/badge-codecov.hbs
+++ b/app/templates/components/badge-codecov.hbs
@@ -1,6 +1,9 @@
-<a href="https://codecov.io/{{ this.service }}/{{ this.repository }}?branch={{ this.branch }}">
-  <img
-      src="https://codecov.io/{{ this.service }}/{{ this.repository }}/coverage.svg?branch={{ this.branch }}"
-      alt="{{ this.text }}"
-      title="{{ this.text }}">
-</a>
+<span class="badge" ...attributes>
+  <a href="https://codecov.io/{{ this.service }}/{{ this.repository }}?branch={{ this.branch }}">
+    <img
+        src="https://codecov.io/{{ this.service }}/{{ this.repository }}/coverage.svg?branch={{ this.branch }}"
+        alt="{{ this.text }}"
+        title="{{ this.text }}">
+  </a>
+  
+</span>
