--- a/app/templates/components/badge-gitlab.hbs
+++ b/app/templates/components/badge-gitlab.hbs
@@ -1,6 +1,9 @@
-<a href="https://gitlab.com/{{ this.repository }}/pipelines">
-  <img
-      src="https://gitlab.com/{{ this.repository }}/badges/{{ this.branch }}/pipeline.svg"
-      alt="{{ this.text }}"
-      title="{{ this.text }}">
-</a>
+<span class="badge" ...attributes>
+  <a href="https://gitlab.com/{{ this.repository }}/pipelines">
+    <img
+        src="https://gitlab.com/{{ this.repository }}/badges/{{ this.branch }}/pipeline.svg"
+        alt="{{ this.text }}"
+        title="{{ this.text }}">
+  </a>
+  
+</span>
