--- a/app/templates/components/crate-row.hbs
+++ b/app/templates/components/crate-row.hbs
@@ -1,44 +1,47 @@
-<div class='desc'>
-  <div class='info'>
-    <LinkTo @route="crate" @model={{this.crate.id}} data-test-crate-link>{{ this.crate.name }}</LinkTo>
-    <CrateTomlCopy @copyText={{this.crateTomlText}} />
-    <CrateBadge @crate={{this.crate}} />
-    {{#each this.crate.annotated_badges as |badge|}}
-      {{component badge.component_name badge=badge data-test-badge=badge.badge_type}}
-    {{/each}}
+<div class="crate row" ...attributes>
+  <div class='desc'>
+    <div class='info'>
+      <LinkTo @route="crate" @model={{this.crate.id}} data-test-crate-link>{{ this.crate.name }}</LinkTo>
+      <CrateTomlCopy @copyText={{this.crateTomlText}} />
+      <CrateBadge @crate={{this.crate}} />
+      {{#each this.crate.annotated_badges as |badge|}}
+        {{component badge.component_name badge=badge data-test-badge=badge.badge_type}}
+      {{/each}}
+    </div>
+    <div class='summary' data-test-description>
+      <span class='small'>
+        {{ truncate-text this.crate.description }}
+      </span>
+    </div>
   </div>
-  <div class='summary' data-test-description>
-    <span class='small'>
-      {{ truncate-text this.crate.description }}
-    </span>
+  <div class='stats'>
+    <div class='downloads' data-test-downloads>
+      {{svg-jar "download"}}
+      <span class='num'>All-Time: {{ format-num this.crate.downloads }}</span>
+    </div>
+    <div class="recent-downloads" data-test-recent-downloads>
+      {{svg-jar "download"}}
+      <span class='num'><abbr title="Downloads in the last 90 days">Recent:</abbr> {{ format-num this.crate.recent_downloads }}</span>
+    </div>
+    <div class="updated-at" >
+      {{svg-jar "latest-updates" height="32" width="32"}}
+      <time title="Last updated: {{ this.crate.updated_at }}" datetime="{{ moment-format this.crate.updated_at 'YYYY-MM-DDTHH:mm:ssZ' }}" data-test-updated-at>
+        {{ moment-from-now this.crate.updated_at }}
+      </time>
+    </div>
   </div>
-</div>
-<div class='stats'>
-  <div class='downloads' data-test-downloads>
-    {{svg-jar "download"}}
-    <span class='num'>All-Time: {{ format-num this.crate.downloads }}</span>
+  <div class="quick-links">
+    <ul>
+      {{#if this.crate.homepage}}
+        <li><a href="{{this.crate.homepage}}">Homepage</a></li>
+      {{/if}}
+      {{#if this.crate.documentation}}
+        <li><a href="{{this.crate.documentation}}">Documentation</a></li>
+      {{/if}}
+      {{#if this.crate.repository}}
+        <li><a href="{{this.crate.repository}}">Repository</a></li>
+      {{/if}}
+    </ul>
   </div>
-  <div class="recent-downloads" data-test-recent-downloads>
-    {{svg-jar "download"}}
-    <span class='num'><abbr title="Downloads in the last 90 days">Recent:</abbr> {{ format-num this.crate.recent_downloads }}</span>
-  </div>
-  <div class="updated-at" >
-    {{svg-jar "latest-updates" height="32" width="32"}}
-    <time title="Last updated: {{ this.crate.updated_at }}" datetime="{{ moment-format this.crate.updated_at 'YYYY-MM-DDTHH:mm:ssZ' }}" data-test-updated-at>
-      {{ moment-from-now this.crate.updated_at }}
-    </time>
-  </div>
-</div>
-<div class="quick-links">
-  <ul>
-    {{#if this.crate.homepage}}
-      <li><a href="{{this.crate.homepage}}">Homepage</a></li>
-    {{/if}}
-    {{#if this.crate.documentation}}
-      <li><a href="{{this.crate.documentation}}">Documentation</a></li>
-    {{/if}}
-    {{#if this.crate.repository}}
-      <li><a href="{{this.crate.repository}}">Repository</a></li>
-    {{/if}}
-  </ul>
+  
 </div>
