--- a/app/styles/crate/reverse-dependencies.module.css
+++ b/app/styles/crate/reverse-dependencies.module.css
@@ -8,16 +8,13 @@
 
 .list {
     list-style: none;
-    background-color: white;
-    padding: 0 20px;
     margin: 0 0 20px;
-}
+    padding: 0;
 
-.row {
-    border-bottom: 2px solid var(--gray-border);
-
-    &:last-of-type {
-        border: none;
+    li {
+        &:not(:first-child) {
+            margin-top: 10px;
+        }
     }
 }
 
