RevDepRow: Improve downloads styling

--- a/app/components/rev-dep-row.hbs
+++ b/app/components/rev-dep-row.hbs
@@ -16,6 +16,6 @@
   </div>
   <div local-class="downloads">
     {{svg-jar "download-arrow" local-class="download-icon"}}
-    <span local-class="rev-dep-downloads">{{ format-num @dependency.downloads }}</span>
+    {{format-num @dependency.downloads}}
   </div>
 </div>
