--- a/app/components/rev-dep-row.module.css
+++ b/app/components/rev-dep-row.module.css
@@ -58,17 +58,19 @@
 .downloads {
     display: flex;
     align-items: center;
-    width: 25%;
-    padding-bottom: 5px;
-    color: var(--main-color-light);
+    color: var(--grey600);
+    font-size: 16px;
+    font-weight: 500;
     font-variant: tabular-nums;
+
+    @media only screen and (max-width: 550px) {
+        margin-top: 5px;
+    }
 }
 
 .download-icon {
+    width: auto;
+    height: 16px;
     flex-shrink: 0;
-    color: #b13b89;
-}
-
-.rev-dep-downloads {
-    padding-left: 7px;
+    margin-right: 7px;
 }
