RevDepRow: Improve long crate name styling

--- a/app/components/rev-dep-row.hbs
+++ b/app/components/rev-dep-row.hbs
@@ -1,5 +1,5 @@
 <div local-class="row {{if this.focused "focused"}}" ...attributes>
-  <div>
+  <div local-class="left">
     <LinkTo
       @route="crate"
       @model={{@dependency.version.crateName}}
