--- a/app/components/rev-dep-row.module.css
+++ b/app/components/rev-dep-row.module.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     position: relative;
     font-size: 18px;
     padding: 15px 25px;
@@ -26,6 +27,11 @@
     @media only screen and (max-width: 550px) {
         display: block
     }
+}
+
+.left {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .link {
