RevDepRow: Load and show crate description

--- a/app/components/rev-dep-row.hbs
+++ b/app/components/rev-dep-row.hbs
@@ -1,21 +1,33 @@
 <div local-class="row {{if this.focused "focused"}}" ...attributes>
-  <div local-class="left">
-    <LinkTo
-      @route="crate"
-      @model={{@dependency.version.crateName}}
-      local-class="link"
-      data-test-crate-name
-      {{on "focusin" (fn this.setFocused true)}}
-      {{on "focusout" (fn this.setFocused false)}}
-    >
-      {{@dependency.version.crateName}}
-    </LinkTo>
-    <span local-class="range">
-      depends on {{@dependency.req}}
-    </span>
+  <div local-class="top">
+    <div local-class="left">
+      <LinkTo
+        @route="crate"
+        @model={{@dependency.version.crateName}}
+        local-class="link"
+        data-test-crate-name
+        {{on "focusin" (fn this.setFocused true)}}
+        {{on "focusout" (fn this.setFocused false)}}
+      >
+        {{@dependency.version.crateName}}
+      </LinkTo>
+      <span local-class="range">
+        depends on {{@dependency.req}}
+      </span>
+    </div>
+    <div local-class="downloads">
+      {{svg-jar "download-arrow" local-class="download-icon"}}
+      {{format-num @dependency.downloads}}
+    </div>
   </div>
-  <div local-class="downloads">
-    {{svg-jar "download-arrow" local-class="download-icon"}}
-    {{format-num @dependency.downloads}}
-  </div>
+
+  {{#if (or this.description this.loadCrateTask.isRunning)}}
+    <div local-class="description" data-test-description>
+      {{#if this.loadCrateTask.isRunning}}
+        <Placeholder local-class="description-placeholder" data-test-placeholder />
+      {{else}}
+        {{this.description}}
+      {{/if}}
+    </div>
+  {{/if}}
 </div>
