--- a/app/templates/accept-invite.hbs
+++ b/app/templates/accept-invite.hbs
@@ -1,7 +1,13 @@
-{{#if this.model.response.accepted}}
+{{#if @model.ok}}
   <h1>You've been added as a crate owner!</h1>
   <p data-test-success-message>Visit your <a href="/dashboard">dashboard</a> to view all of your crates, or <a href="/me">account settings</a> to manage email notification preferences for all of your crates.</p>
 {{else}}
   <h1>Error in accepting crate ownership.</h1>
-  <p data-test-error-message>You may want to visit <a href="/me/pending-invites">crates.io/me/pending-invites</a> to try again.</p>
+  <p data-test-error-message>
+    {{#if @model.errorText}}
+      {{@model.errorText}}
+    {{else}}
+      You may want to visit <a href="/me/pending-invites">crates.io/me/pending-invites</a> to try again.
+    {{/if}}
+  </p>
 {{/if}}
