Make it possible to open the search using S

--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -23,6 +23,7 @@
       >
       <label for="cargo-desktop-search" local-class="search-label">Search</label>
       {{on-key 's' (focus '#cargo-desktop-search')}}
+      {{on-key 'S' (focus '#cargo-desktop-search')}}
       {{on-key 'shift+s' (focus '#cargo-desktop-search')}}
     </form>
 
