--- a/app/components/crate-downloads-list.module.css
+++ b/app/components/crate-downloads-list.module.css
@@ -13,10 +13,11 @@
     font-size: 90%;
     padding: 20px 10px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .download-icon {
     color: #b13b89;
+    margin-left: auto;
+    margin-right: 4px;
 }
