--- a/app/styles/crate/version.module.css
+++ b/app/styles/crate/version.module.css
@@ -39,6 +39,7 @@
     text-align: center;
     font-size: 20px;
     font-weight: 300;
+    overflow-wrap: break-word;
 
     code {
         font-size: 18px;
