Drop crates.textsearchable_index_col from the export
This column is postgres specific and is normally populated via a
trigger. The trigger is now enabled during the import so that the column
can be dropped from the export.

--- a/src/tasks/dump_db/dump-import.sql.hbs
+++ b/src/tasks/dump_db/dump-import.sql.hbs
@@ -16,6 +16,9 @@ BEGIN;
     TRUNCATE "{{this.name}}" RESTART IDENTITY CASCADE;
 {{~/each}}
 
+    -- Enable this trigger so that `crates.textsearchable_index_col` can be excluded from the export
+    ALTER TABLE "crates" ENABLE TRIGGER "trigger_crates_tsvector_update";
+
     -- Import the CSV data.
 {{~#each tables}}
     \copy "{{this.name}}" ({{this.columns}}) FROM 'data/{{this.name}}.csv' WITH CSV HEADER
