--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -18,8 +18,8 @@
 
     @media only screen and (min-width: 890px) {
         grid-template:
-            "index-link search-form nav" auto
-            / auto 1fr auto;
+            "index-link search-form nav login" auto
+            / auto minmax(150px, 400px) minmax(220px, 1fr) auto;
     }
 
     a {
@@ -80,19 +80,11 @@ input.search {
     background-size: 14px 15px;
     border-radius: 15px;
     box-shadow: none;
-    transition: box-shadow 150ms, max-width 150ms;
+    transition: box-shadow 150ms;
 
     &:focus {
         outline: none;
         box-shadow: 0 0 0 4px var(--yellow500);
-    }
-
-    @media only screen and (min-width: 551px) {
-        max-width: 400px;
-
-        &:focus {
-            max-width: 100%;
-        }
     }
 }
 
@@ -124,6 +116,14 @@ input.search {
 
     @media only screen and (min-width: 890px) {
         display: flex;
+    }
+}
+
+.login {
+    display: none;
+
+    @media only screen and (min-width: 890px) {
+        display: block;
     }
 }
 
